# delta

./: CHANGELOG.md  CMakeLists.txt  INSTALL_Mac.txt  INSTALL_Windows.txt  README.md  TERMS.txt
.github/workflows/: release.yml
Source/: DeltaLookAndFeel.h  DeltaProcessor.cpp  DeltaProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp
